fix: 리소스 주인 확인하는 메소드 리턴 타입 변경
리소스 주인 확인 후 영속 상태 엔티티 가져오도록 수정